--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -5,8 +5,22 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="350" Width="525" Background="#FFFFFFFF">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="260*"/>
+            <ColumnDefinition Width="257*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="b1" Content="СТАРТ!" HorizontalAlignment="Left" Height="37" Margin="195,22,0,0" VerticalAlignment="Top" Width="97" Click="b1_Click" FontWeight="Bold" Background="#FF0000" Grid.ColumnSpan="2"/>
+        <UniformGrid Name="setka" Margin="0,10,0,0" Grid.ColumnSpan="2">
+
+
+        </UniformGrid>
+        <Label x:Name="lbtimer" Content="00:00:00" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Visibility="Hidden"/>
+        <Label x:Name="lbname" Content="Имя" HorizontalAlignment="Left" Margin="10,67,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbname" HorizontalAlignment="Left" Height="23" Margin="74,67,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="Butrecords" Content="Посмотреть рекорды" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="138" Height="23" Click="Butrecords_Click"/>
+        <ListBox x:Name="Lbshow" HorizontalAlignment="Left" Height="200" Margin="51,98,0,0" VerticalAlignment="Top" Width="200" MouseLeftButtonDown="Lbshow_MouseLeftButtonDown" Visibility="Hidden"/>
+
     </Grid>
 </Window>
