--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -5,25 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" Background="#FFFFFFFF">
-    <Grid>
+        Title="MainWindow" Height="177" Width="250" Background="#FFFFFFFF">
+    <Grid Margin="0,0,2,-31">
         <Grid.RowDefinitions>
             <RowDefinition Height="0*"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="515*"/>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="b1" Content="СТАРТ!" Margin="69,54,0,0" Click="b1_Click" FontWeight="Bold" Background="#FF0000" Grid.Row="1" HorizontalAlignment="Left" Width="97" Height="37" VerticalAlignment="Top"/>
+        <Button x:Name="b1" Content="СТАРТ!" Margin="69,54,0,0" Click="b1_Click" FontWeight="Bold" Grid.Row="1" HorizontalAlignment="Left" Width="97" Height="37" VerticalAlignment="Top" Background="White"/>
         <UniformGrid Name="setka" Margin="157,30,159,40" Grid.RowSpan="2"/>
-        <Label x:Name="lbtimer" Content="0:0" Margin="91,9,376,0" FontSize="24" FontFamily="Showcard Gothic" Height="39"  VerticalAlignment="Top" Grid.RowSpan="2"/>
-        <Label x:Name="lbname" Content="Имя" HorizontalAlignment="Right" Margin="0,19,429,0" VerticalAlignment="Top" RenderTransformOrigin="0.481,0.419" Height="43" Width="54" Grid.Row="1"/>
-        <TextBox x:Name="tbname" Margin="69,19,326,270" TextWrapping="Wrap" Grid.Row="1"/>
+        <Label x:Name="lbtimer" Content="0:0" Margin="91,9,376,0" FontSize="24" FontFamily="Showcard Gothic" Visibility="Hidden" Height="39"  VerticalAlignment="Top" Grid.RowSpan="2"/>
 
 
-        <ListBox x:Name="Lbshow" HorizontalAlignment="Right" Height="200" Margin="0,54,10,0" VerticalAlignment="Top" Width="167" Grid.Row="1"/>
-        <Label Content="      Таблица Рекордов" Margin="0,31,8,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="27" HorizontalAlignment="Right" Width="169"/>
+        <ListBox x:Name="Lbshow" HorizontalAlignment="Right" Height="200" Margin="0,54,10,0" VerticalAlignment="Top" Visibility="Hidden" Width="167" Grid.Row="1"/>
+        <Label x:Name="tabll" Content="      Таблица Рекордов" Margin="0,31,8,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="27" Visibility="Hidden"  HorizontalAlignment="Right" Width="169"/>
+        <Label x:Name="lbname" Content="Имя" HorizontalAlignment="Left" Margin="25,14,0,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbname" HorizontalAlignment="Left" Height="23" Margin="69,18,0,0" Grid.RowSpan="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
