зло$%%чий рандом

--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Старпёр" Height="177" Width="250" Background="#FFFFFFFF" Icon="C:\Users\Sergo\source\repos\pyat\KursachSaper\WpfApp1\WpfApp1\bomb\bomb.jpg">
-    
+        Title="Старпёр" Height="218" Width="250" Background="#FFFFFFFF" Icon="C:\Users\Sergo\source\repos\pyat\KursachSaper\WpfApp1\WpfApp1\bomb\bomb.jpg">
+
     <Grid Margin="0,0,2,-31">
         <Grid.RowDefinitions>
             <RowDefinition Height="0*"/>
@@ -25,6 +25,8 @@
         <Button x:Name="tabll" Content="      Таблица Рекордов" Margin="0,29,9,0" Grid.RowSpan="2" VerticalAlignment="Top" Height="27" Visibility="Hidden" HorizontalAlignment="Right" Width="169" Click="Tabll_Click_1"/>
         <Label x:Name="lbname" Content="Имя" HorizontalAlignment="Left" Margin="25,14,0,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
         <TextBox x:Name="tbname" HorizontalAlignment="Left" Height="23" Margin="69,18,0,0" Grid.RowSpan="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="b2" Content="Сложка" Margin="70,94,0,0" Click="b2_Click" FontWeight="Bold" Grid.Row="1" HorizontalAlignment="Left" Width="97" Height="37" VerticalAlignment="Top" Background="White"/>
+        <Button x:Name="b3" Content="Изи" Margin="70,137,0,0" Click="b3_Click" FontWeight="Bold" Grid.Row="1" HorizontalAlignment="Left" Width="97" Height="37" VerticalAlignment="Top" Background="White"/>
 
     </Grid>
 </Window>
